Added start of custom theme

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,11 @@ header {
     -moz-user-select: none;
     -webkit-user-select: none;
     user-select: none;
+
+    .details {
+        float: right;
+        text-align: right;
+    }
 }
 
 section {
